<resources>
    <string name="app_name">nhom4</string>
    <string name="login">Login</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="show_password">Show password</string>
    <string name="forgot_password">Forgot password? Get new</string>
    <string name="no_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup_illustration">Sign Up Illustration</string>
    <string name="have_account">Do you have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="ti_p_t_c">Tiếp tục</string>
    <string name="t_m_ki_m_b_n_m_i">Tìm kiếm bạn mới</string>
    <string name="t_m_b_n_b_t_c_c_ng_d_ng_kh_c">Tìm bạn bè từ các ứng dụng khác</string>
    <string name="xu_t">Đề xuất</string>
    <string name="xem_th_m">Xem thêm</string>
    <string name="m_i_t_c_c_ng_d_ng_kh_c">Mời từ các ứng dụng khác</string>
    <string name="nguy_n_quang_vinh">Nguyễn Quang Vinh</string>
    <string name="ang_ho_t_ng">Đang hoạt động</string>
    <string name="hinttohelp">Việc này sẽ giúp bạn bè của bạn tìm thấy\nbạn trên ứng dụng!</string>
    <string name="t_n_ng_i_d_ng">tên người dùng</string>
    <string name="ch_n_m_t_t_n_ng_i_d_ng">Chọn một tên người dùng</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="ch_o_m_ng_b_n_quay_tr_l_i">Chào mừng bạn quay trở lại!</string>
    <string name="email">Email</string>
    <string name="qu_n_m_t_kh_u">Quên mật khẩu?</string>
    <string name="m_t_kh_u">Mật khẩu</string>
    <string name="ch_a_c_t_i_kho_n">Chưa có tài khoản?</string>
    <string name="ng_k_ngay">Đăng ký ngay</string>
    <string name="th_ng_tin_c_nh_n">Thông tin cá nhân</string>
    <string name="c_i_t">Cài đặt</string>
    <string name="ng_nh_p_ngay">Đăng nhập ngay</string>
    <string name="c_t_i_kho_n">Đã có tài khoản?</string>
    <string name="t_o_t_i_kho_n">Tạo tài khoản</string>
    <string name="nh_p_l_i_m_t_kh_u">Nhập lại mật khẩu</string>
    <string name="t_o_t_i_kho_n_m_i_b_t_u">Tạo tài khoản mới để bắt đầu</string>
    <string name="ng_k">Đăng ký</string>
    <string name="t_o_m_t_t_i_kho_n">Tạo một tài khoản</string>
    <string name="nh_tr_c_ti_p_t_b_n_b_nngay_tr_n_m_n_h_nh_ch_nh">Ảnh trực tiếp từ bạn bè,\nngay trên màn hình chính</string>
    <string name="nhom4">Nhom4</string>
    <string name="astronaut_illustration">Astronaut Illustration</string>
    <string name="bray">Bray</string>
    <string name="supporting_line_text_lorem_ipsum_dolor_sit_amet_consectetur">Supporting line text lorem ipsum dolor sit amet, consectetur.</string>
    <string name="nh_p_tin_nh_n">Nhập tin nhắn. . .</string>
    <string name="ti_u_m_c">Tiêu đề mục</string>
    <string name="kho_nh_kh_c_u_ti_n_c_a_b_n_c_ghi_nh_n_v_o_ng_y_3_thg_3_2025">Khoảnh khắc đầu tiên của bạn đã được ghi nhận vào ngày 3 thg 3, 2025</string>
    <string name="t_t_c">Tất cả</string>
    <string name="back">back</string>
    <string name="dropdown">Dropdown</string>
    <string name="add">Add</string>
    <string name="cometo">Cometo</string>
    <string name="th_m_th_i_quen_m_i">Thêm thói quen mới</string>
    <string name="heyy_what_s_up_guyy">Heyy, What\'s up guyy?</string>
    <string name="check_in">Check in</string>
    <string name="down">down</string>
    <string name="chu_i_streak">Chuỗi Streak</string>
    <string name="th_ng_3_2025">Tháng 3, 2025</string>
    <string name="t2">T2</string>
    <string name="t3">T3</string>
    <string name="t4">T4</string>
    <string name="t5">T5</string>
    <string name="t6">T6</string>
    <string name="t7">T7</string>
    <string name="cn">CN</string>
    <string name="th_ng_k">Thống kê</string>
    <string name="_1">1</string>
    <string name="ch_y_b">Chạy bộ</string>
    <string name="m_i_ng_y_15_ph_t">Mỗi ngày 15 phút</string>
    <string name="ti_p_theo">Tiếp theo</string>
    <string name="_50">50%</string>
    <string name="name">App Name</string>
    <string name="answer">Mình khỏe, cảm ơn bạn!</string>
    <string name="time">10:31</string>
    <string name="send">Mình khỏe, cảm ơn bạn!</string>
    <string name="message">What\'s up guyyy?</string>
    <string name="time_2">12:45</string>
    <string name="message_2">Xin chào, hôm nay bạn thế nào?</string>
    <string name="time_3">10:30</string>
    <string name="timeline">Bạn 22 thg 9</string>
    <string name="timeline_2">Quangvinh12, Tue122,. . .</string>
    <string name="hint">Gợi ý cho bạn</string>
    <string name="th_m">Thêm</string>
    <string name="activity">Hoạt động</string>
    <string name="att1">Karaoke</string>
    <string name="detail">Supporting line text lorem ipsum dolor sit amet, consectetur.</string>
    <string name="active">Active</string>
    <string name="tbLeft">TopBarLeft</string>
    <string name="tbright_1">TopBarRight</string>
    <string name="topbarright_2">TopBarRight2</string>
    <string name="topbarright_3">TopBarRight3</string>
    <string name="todo">todo\n</string>
    <string name="left_navigation">todo</string>
    <string name="right_navigation">todo</string>
    <string name="l_ch_s">Lịch sử</string>
    <string name="g_i_tin_nh_n">Gửi tin nhắn</string>
    <string name="ti_p_t_c1">Tiếp tục</string>
    <string name="l_u_thay_i">Lưu thay đổi</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="b_n_b">Bạn bè</string>
    <string name="t_m_ki_m_b_n_m_is">Tìm kiếm bạn mới</string>
    <string name="l_i_m_i_k_t_b_n">Lời mời kết bạn</string>
    <string name="xem_t_t_c">Xem tất cả</string>
    <string name="g_i_cho_b_n">Gợi ý cho bạn</string>
    <string name="sxem_th_m">Xem thêm</string>
    <string name="_10_b_n_b">10 Bạn bè</string>
    <string name="feeling">Feeling...</string>
    <string name="th_m_v_i_d_ng_t_m_s">Thêm vài dòng tâm sự...</string>
    <string name="g_i_ngay">Gửi ngay</string>
    <string name="caption">Caption</string>
    <string name="_12_00">12:00</string>
    <string name="user1_user2">User1, User2…</string>
    <string name="angry_it_s_ok">Angry - It\'s Ok</string>
    <string name="teablack">TeaBlack</string>
    <string name="q">Thêm</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="requester">Requester</string>
    <string name="times">Time</string>
    <string name="status">Status</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="acceptd">Accept</string>
    <string name="rejectd">Reject</string>
    <string name="username">Username</string>
    <string name="davatar">avatar</string>
    <string name="avatars">avatar</string>
    <string name="usernamed">Username</string>
    <string name="adde">Add</string>
    <string name="th_m_b_n">Thêm bạn</string>
    <string name="t_ch_i">Từ chối</string>
    <string name="date_title">2025\nNgày 12 tháng 8</string>
    <string name="share">Share</string>
    <string name="_23_44">23:44</string>
    <string name="angry_it_s_ok_2">Angry - It\'s Ok</string>
    <string name="ng_y_12_th_ng_8">Ngày 12 tháng 8</string>
    <string name="_2025">2025</string>
    <string name="menu">Menu</string>
    <string name="calendar">Calendar</string>
    <string name="members">Members</string>
    <string name="everyday">Everyday</string>
    <string name="finished">Finished</string>
    <string name="subtitle">Subtitle</string>
    <string name="activity_title_placeholder">Activity Title</string>
    <string name="activity_description_placeholder">Activity Description</string>
    <string name="location_placeholder">Within 5 miles • $$-$$$</string>
    <string name="time_range_placeholder">10:50 PM - 11:05 PM</string>
    <string name="member_count_placeholder">3 member</string>
    <string name="member_count_format">%1$d member</string>
    <string name="story_image">Story Image</string>
    <string name="story_thumbnail">Story Thumbnail</string>
    <string name="thumbnail_image" />
    <string name="ng_tr_c_11_gi">Ngủ Trước 11 giờ</string>
    <string name="everday">Everday</string>
    <string name="_10_50_pm_11_05_pm">10:50 PM - 11:05 PM</string>
    <string name="_3_member">3 member</string>
    <string name="habit_image" />

    <string name="activity_header_image">Activity Header Image</string>
    <string name="view_all_posts">Xem tất cả bài đăng</string>
    <string name="checkin_history">Lịch sử check-in</string>
    <string name="no_posts_yet">Chưa có bài đăng nào\nHãy là người đầu tiên check-in!</string>
    <string name="loading_posts">Đang tải bài đăng...</string>
    <string name="error_no_activity_id">Lỗi: Không có ID hoạt động</string>
</resources>